# remix-pwa-ecosystem

./: .gitignore  Cargo.toml  README.md  build.sh  pack.sh
.cargo/: config.toml
crates/client/: .gitignore  Cargo.toml  README.md
crates/client/src/: lib.rs
crates/client/src/client/: clipboard.rs  connection.rs  fullscreen.rs  geolocation.rs  langauges.rs  language.rs  mod.rs  permissions.rs  response.rs  visibility.rs
crates/client/tests/: wasm.rs
tests/: test.sh  wasm-test.sh
