[package]
name = "client"
version = "0.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"

[dependencies.web-sys]
version = "0.3.54"
features = [
  "Window",
  "Navigator",
  "Permissions",
  "Notification", 
  "NotificationPermission",
  "Clipboard",
  "WakeLock",
  "Document",
  "Element",
  "VisibilityState",
  "NetworkInformation",
  "ConnectionType",
  "BatteryManager",
  "Geolocation"
]